[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/crosshair_user.svg" type="Texture" id=1]
[ext_resource path="res://assets/crosshair_neutral.svg" type="Texture" id=2]
[ext_resource path="res://assets/crosshair_agent.svg" type="Texture" id=3]
[ext_resource path="res://assets/white_circle.png" type="Texture" id=4]
[ext_resource path="res://scripts/crosshair.gd" type="Script" id=5]

[sub_resource type="CanvasItemMaterial" id=1]
light_mode = 2

[sub_resource type="CircleShape2D" id=2]

[sub_resource type="CanvasItemMaterial" id=3]
light_mode = 1

[sub_resource type="CanvasItemMaterial" id=4]
light_mode = 1

[sub_resource type="CanvasItemMaterial" id=5]
light_mode = 1

[node name="crosshair" type="Area2D"]
scale = Vector2( 0.15, 0.15 )
z_index = 150
script = ExtResource( 5 )

[node name="Light2D" type="Light2D" parent="."]
material = SubResource( 1 )
scale = Vector2( 3, 3 )
enabled = false
texture = ExtResource( 4 )
mode = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2( 20.2827, 20.0369 )
shape = SubResource( 2 )

[node name="crosshair_user" type="Sprite" parent="."]
visible = false
material = SubResource( 3 )
texture = ExtResource( 1 )

[node name="control_user" type="Control" parent="crosshair_user"]
margin_right = 40.0
margin_bottom = 40.0
focus_mode = 2

[node name="crosshair_neutral" type="Sprite" parent="."]
material = SubResource( 4 )
texture = ExtResource( 2 )

[node name="control_neutral" type="Control" parent="crosshair_neutral"]
margin_right = 40.0
margin_bottom = 40.0
focus_mode = 2

[node name="crosshair_agent" type="Sprite" parent="."]
visible = false
material = SubResource( 5 )
texture = ExtResource( 3 )

[node name="control_agent" type="Control" parent="crosshair_agent"]
margin_right = 40.0
margin_bottom = 40.0
focus_mode = 2
